# Rpoppler

./: DESCRIPTION  MD5  NAMESPACE  README  configure  configure.ac
R/: doc.R  fonts.R  info.R  text.R
man/: PDF_doc.Rd  PDF_fonts.Rd  PDF_info.Rd  PDF_text.Rd
src/: Makevars.in  Rpoppler.c  Rpoppler.h  config.h.in  error.cc  init.c
